--- a/frontend/src/components/Home/index.css
+++ b/frontend/src/components/Home/index.css
@@ -48,13 +48,21 @@
 }
 
 .searchbox {
-    padding: 8px 12px;
+    padding: 4px 12px;
     flex-grow: 1;
     font-size: 14px;
     border: 1px solid #ccc;
     border-right: none;
     border-radius: 5px;
     background: transparent;
+}
+
+.searchbox.light {
+    color: #000000
+}
+
+.searchbox.dark {
+    color: #ebebeb
 }
 
 .searchbox-btn {
@@ -77,7 +85,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 0px;
 }
 
 .thumbnail-container {
